fixed positioning for icon within cta button. added padding-bottom to main component for desktop view. set correct margin-bottom for video details component for desktop view. applied image-rendering property to images in video list component scss file to fix blurry images.

--- a/src/components/Comments_form/Comments_form.scss
+++ b/src/components/Comments_form/Comments_form.scss
@@ -14,6 +14,7 @@
     }
 
     &-title {
+        font-family: 'AvenirNext';
         font-size: 13px;
         font-weight: 700;
         line-height: 18px;
@@ -99,6 +100,11 @@
             left: 12px;
             top: 12px;
             height: 20px;
+
+            @include desktop {
+                left: 10px; 
+                top: 10px;
+            }
         }
     }
     
