--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -19,6 +19,7 @@
         @include desktop {
             width: 31%;
             border-left: 1px solid $Mercury;
+            padding-bottom: 40px;
         }
     }
 }
